Enterprises Image List added and some text.

--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -9,6 +9,7 @@ BCOR5mm, % Binding correction
 
 \usepackage{graphicx}
 \usepackage{tikz-er2}
+\usepackage[colorlinks, urlcolor=blue, linkcolor=black]{hyperref}
 
 \title{Tp Sistema de Logistica}
 \author{Matias M. Marceca}
@@ -65,6 +66,7 @@ quiera agregar al producto base no perjudicara el trabajo actual ya realizado
 por el cliente, ya que el sistema contara con un administrador de
 Plugins ( funcionalidades adicionales que proporcionan mayor versatilidad a un
 sistema ya desarrollado ).
+\newline\newline
 Tambien la empresa contara con contratos diferenciados en tipos de paquetes de
 rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
 
@@ -76,12 +78,12 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   varios y variados metodos evitando que el enemigo note su transporte
   y llegada al objetivo.
   Para llevar a cabo tal plan, se originan los planes de transportes.
-
+  \newline\newline
   Actualmente las Empresas de Logistica tienen como objetivo, planificar el
   traslado de Personas, Productos, Materia Prima, etc, de un lugar a otro.
   Para ello se requiere de una gran infraestructura para poder satisfacer
   varias etapas que cumplen con el objetivo planteado.
-
+  \newline\newline
   Algunas etapas son :
   \begin{itemize}
     \item  Analisis de Trayecto de Mercaderia
@@ -90,18 +92,20 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   \end{itemize}
 
 
-\subsection {Segmentacion del Mercado}
+\subsection {Alcance Estimado}
   Actualmente el Sistema sera de amplio alcance gracias a su facilidad
   de incorporacion y paquetes de modulos en la estrategia de venta, dando
   la posibilidad de obtener la atencion de las medianas y grandes empresas.
 
+\pagebreak
+  \textbf {\emph{Listado de Empresas relacionadas a Transporte y Logistica:} }
 
-
-
-
-
-
-
+  \begin{flushleft}
+    \includegraphics[width=17cm, keepaspectratio]{images/list_1.png}
+    \includegraphics[width=17cm, keepaspectratio]{images/list_2.png}
+    \includegraphics[width=17cm, keepaspectratio]{images/list_3.png}
+    \includegraphics[width=17cm, keepaspectratio]{images/list_4.png}
+  \end{flushleft}
 
 \section {Viabilidad de Negocio}
 
@@ -143,8 +147,6 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
             prendidos en todo momento.
   \end{itemize}
 
-\pagebreak
-
   \item \textbf {Mano de Obra}
   \begin{itemize}
     \item Para la creacion de la empresa, se requiere de personal capacitado y
@@ -169,6 +171,8 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
             ya que algunas aplicaciones, ya sean utilizadas en internet o de
             escritorio, requieren la accion de presionar sobre botones en la
             pantalla.
+\pagebreak
+
       \item Se requiere de \emph { \textbf{17} } Gabinetes (Caja rectangular
               donde se unen componentes alimentados por cables de electricidad
               unidos a una placa madre que ejecutan las tareas internas del
@@ -186,7 +190,6 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
             Router ) Wifi ( Tecnologia de transmision de datos por medio de
             señales de ondas de radio en distintas frecuencias ) para
             conectividad de red sin cable.
-\pagebreak
     \item Se requiere de \emph { \textbf{1} } expansor de señal Wifi
             para un mayor abastecimiento de señal en todo el edificio y
             no depender de varios Routers para que la señal sea accesible en
@@ -239,6 +242,12 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
 
 \section{Procesos}
 
+\subsection{Mapa de Procesos}
+    % this include the content of process_map_content.tex
+    %\include{process_map_content}
+    \input{process_map_content}
+
+  \begin{flushleft}
   \textbf{ \emph{Marketing : } } El proceso de \textit{Marketing} estara
   a cargo de la creacion del modelo de negocio para poder generar las ventas.
    \newline \newline
@@ -257,7 +266,7 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
    estara a cargo de autorizar la incorporacion de nuevos integrantes a la
    empresa como tambien nuevos insumos para mejorar la productividad e
    imagen de la empresa.
-  \newline  \newline
+   \newline \newline
   \textbf{ \emph{Distribucion de Tareas : } } En la \textit{Distribucion de Tareas}
   se evaluan las prioridades a tener en cuenta para un periodo de dos semanas.
   Estas prioridades son creadas en conjunto entre el cliente y un representante
@@ -318,17 +327,17 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   finalizar en un resultado \textsc{Positivo} o \textsc{Negativo} teniendo
   que corregir los errores dados en el proceso y acordar una nueva fecha de
   instalacion del sistema.
+  \end{flushleft}
 
-\pagebreak
+\section{Referencias}
 
-  \subsection{Mapa de Procesos}
-    % this include the content of process_map_content.tex
-    \include{process_map_content}
+\begin{itemize}
+  \item \textit{Origen de la Logistica :} \href{https://clusterlogistic.org/es/historia-de-la-logistica/} {Link}
+  \item \textit{Listado de Empresas seleccionadas:} \href{https://ar.kompass.com/buy-company-list/} {Link}
+\end{itemize}
+
 \end{document}
 
-
-\section {Referencias}
-  Link : \emph { \textbf{https://clusterlogistic.org/es/historia-de-la-logistica/} }
 
 % Just in case of need
 % std nus: ( normal computer user )
