--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -24,7 +24,6 @@ BCOR5mm, % Binding correction
 \pagebreak
 
 \section{Idea y Oportunidad de Negocio}
-
 La idea tiene de innovacion la creacion de un sistema modular.
 con la posibilidad de sincronizar tareas entre distintas areas
 tales como ( proveedores - transportistas - clientes - distribuidoras )
@@ -70,42 +69,71 @@ sistema ya desarrollado ).
 Tambien la empresa contara con contratos diferenciados en tipos de paquetes de
 rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
 
-\section {Analsis del Mercado Consumidor}
-\subsection {Perfil y Comportamiento del consumidor}
-  El surgimiento de la necesidad de logistica para el transporte de
-  productos o individuos, se origino en la Ingenieria Militar.
-  El objetivo fue trasladar Miles de soldados al mismo tiempo utilizando
-  varios y variados metodos evitando que el enemigo note su transporte
-  y llegada al objetivo.
-  Para llevar a cabo tal plan, se originan los planes de transportes.
-  \newline\newline
-  Actualmente las Empresas de Logistica tienen como objetivo, planificar el
-  traslado de Personas, Productos, Materia Prima, etc, de un lugar a otro.
-  Para ello se requiere de una gran infraestructura para poder satisfacer
-  varias etapas que cumplen con el objetivo planteado.
-  \newline\newline
-  Algunas etapas son :
-  \begin{itemize}
-    \item  Analisis de Trayecto de Mercaderia
-    \item  Distribucion de Productos por transporte
-    \item  Administracion de Stock de Productos
-  \end{itemize}
-
-
-\subsection {Alcance Estimado}
-  Actualmente el Sistema sera de amplio alcance gracias a su facilidad
-  de incorporacion y paquetes de modulos en la estrategia de venta, dando
-  la posibilidad de obtener la atencion de las medianas y grandes empresas.
-
-\pagebreak
-  \textbf {\emph{Listado de Empresas relacionadas a Transporte y Logistica:} }
-
-  \begin{flushleft}
-    \includegraphics[width=17cm, keepaspectratio]{images/list_1.png}
-    \includegraphics[width=17cm, keepaspectratio]{images/list_2.png}
-    \includegraphics[width=17cm, keepaspectratio]{images/list_3.png}
-    \includegraphics[width=17cm, keepaspectratio]{images/list_4.png}
-  \end{flushleft}
+%\section {Analsis del Mercado Consumidor}
+%\subsection {Perfil y Comportamiento del consumidor}
+%  El surgimiento de la necesidad de logistica para el transporte de
+%  productos o individuos, se origino en la Ingenieria Militar.
+%  El objetivo fue trasladar Miles de soldados al mismo tiempo utilizando
+%  varios y variados metodos evitando que el enemigo note su transporte
+%  y llegada al objetivo.
+%  Para llevar a cabo tal plan, se originan los planes de transportes.
+%  \newline\newline
+%  Actualmente las Empresas de Logistica tienen como objetivo, planificar el
+%  traslado de Personas, Productos, Materia Prima, etc, de un lugar a otro.
+%  Para ello se requiere de una gran infraestructura para poder satisfacer
+%  varias etapas que cumplen con el objetivo planteado.
+%  \newline\newline
+%  Algunas etapas son :
+%  \begin{itemize}
+%    \item  Analisis de Trayecto de Mercaderia
+%    \item  Distribucion de Productos por transporte
+%    \item  Administracion de Stock de Productos
+%  \end{itemize}
+%
+%
+%\subsection {Alcance Estimado}
+%  Actualmente el Sistema sera de amplio alcance gracias a su facilidad
+%  de incorporacion y paquetes de modulos en la estrategia de venta, dando
+%  la posibilidad de obtener la atencion de las medianas y grandes empresas.
+%
+%\pagebreak
+%  \textbf {\emph{Listado de Empresas Nacionales de Transporte:} }
+%
+%  \begin{table}[!th]
+%    \begin{tabular}{|l|c|c|}
+%    \hline
+%      Periodo  & Jurisdiccion &  Empresa \\
+%    \hline
+%      11/2018  & NACIONAL     & MICRO OMNIBUS NORTE S.A. \\
+%    \hline
+%      11/2018  & NACIONAL     & UNION TRANSPORTISTAS DE EMPRESAS SA \\
+%    \hline
+%      11/2018  & NACIONAL     & TRANSPORTES DEL TEJAR S.A. \\
+%    \hline
+%      11/2018  & NACIONAL     & SOCIEDAD ANONIMA EXPRESO SUDOESTE \\
+%    \hline
+%      11/2018  & NACIONAL     & BUENOS AIRES BUS SOCIEDAD ANONIMA \\
+%    \hline
+%      11/2018  & NACIONAL     & LA CENTRAL DE VICENTE LOPEZ S.A. \\
+%    \hline
+%      11/2018  & NACIONAL     & TRANSPORTES SOL DE MAYO C.I.S.A. \\
+%    \hline
+%      11/2018  & NACIONAL     & UNION TRANSPORTISTAS DE EMPRESAS SA \\
+%    \hline
+%      11/2018  & NACIONAL     & MICRO OMNIBUS SUR S.A.C. \\
+%    \hline
+%      11/2018  & NACIONAL     & MICROOMNIBUS BARRANCAS DE BELGRANO S.A. \\
+%    \hline
+%      11/2018  & NACIONAL     & MICROOMNIBUS CIUDAD DE BS.AS. S.A.T.C.I \\
+%    \hline
+%      11/2018  & NACIONAL     & EMPRESA DE TRANSPORTES AMERICA S.A.C.I. \\
+%    \hline
+%      11/2018  & NACIONAL     & TRANSPORTES ATLANTIDA S.A.C. \\
+%    \hline
+%    \end{tabular}
+%    \caption{Ultima actualizacion 11/2019}
+%    \label{ex:table}
+%  \end{table}
 
 \section {Viabilidad de Negocio}
 
@@ -116,7 +144,7 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
     \item Se requiere el uso de \emph { \textbf{6} } discos externos para la
             administracion de guardado de informacion relevante al desarrollo
             del producto.
-    \item Se requiere el uso de pendrives para el facil
+    \item Se requiere del uso de \emph { \textbf{6} } pendrives para el facil
             y comodo traslado de archivos de video, librerias y graficos
             para ser utilizados el dia que se requiera una presentacion al
             cliente en las oficinas del mismo.
@@ -240,12 +268,44 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   \end{itemize}
 \end{itemize}
 
+
+\subsection {Proyeccion de Costos Requeridos}
+  \begin{table}[!th]
+    \begin{tabular}{|l|c|c|l|}
+      Producto         & Cant. Requerida  & Prec. Unidad. & Prec. Acum. & Publicacion  \\
+    \hline
+      Discos Externos  &  6  & 4489 & 26934 & \href{http://www.pc-retail.com.ar/prod/id=7615/GlobalBluePoint-ERP.aspx#toner} {Link}  \\
+    \hline
+      Pendrives        & 6  & 1105  & 6630 & \href{https://www.computershopping.com.ar/Producto/Pen-Drive-Kingston-DataTraveler-100-G3-32GB-USB-3-0} {Link}  \\
+    \hline
+      Monitores       & 33  &   & 402 & \href{} {Link}  \\
+    \hline
+      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
+    \hline
+      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
+    \hline
+      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
+    \hline
+      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
+    \hline
+      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
+    \hline
+      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
+    \hline
+      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
+    \hline
+      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
+    \hline
+    \end{tabular}
+  \end{table}
+
+
 \section{Procesos}
 
 \subsection{Mapa de Procesos}
     % this include the content of process_map_content.tex
     %\include{process_map_content}
-    \input{process_map_content}
+  \input{process_map_content}
 
   \begin{flushleft}
   \textbf{ \emph{Marketing : } } El proceso de \textit{Marketing} estara
@@ -329,11 +389,13 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   instalacion del sistema.
   \end{flushleft}
 
+
+
 \section{Referencias}
 
 \begin{itemize}
   \item \textit{Origen de la Logistica :} \href{https://clusterlogistic.org/es/historia-de-la-logistica/} {Link}
-  \item \textit{Listado de Empresas seleccionadas:} \href{https://ar.kompass.com/buy-company-list/} {Link}
+  \item \textit{Listado de Empresas seleccionadas:} \href{https://servicios.transporte.gob.ar/gobierno_abierto/detalle.php?t=empresas&d=nacional} {Link}
 \end{itemize}
 
 \end{document}
