added table with prices and links

--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -69,74 +69,7 @@ sistema ya desarrollado ).
 Tambien la empresa contara con contratos diferenciados en tipos de paquetes de
 rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
 
-%\section {Analsis del Mercado Consumidor}
-%\subsection {Perfil y Comportamiento del consumidor}
-%  El surgimiento de la necesidad de logistica para el transporte de
-%  productos o individuos, se origino en la Ingenieria Militar.
-%  El objetivo fue trasladar Miles de soldados al mismo tiempo utilizando
-%  varios y variados metodos evitando que el enemigo note su transporte
-%  y llegada al objetivo.
-%  Para llevar a cabo tal plan, se originan los planes de transportes.
-%  \newline\newline
-%  Actualmente las Empresas de Logistica tienen como objetivo, planificar el
-%  traslado de Personas, Productos, Materia Prima, etc, de un lugar a otro.
-%  Para ello se requiere de una gran infraestructura para poder satisfacer
-%  varias etapas que cumplen con el objetivo planteado.
-%  \newline\newline
-%  Algunas etapas son :
-%  \begin{itemize}
-%    \item  Analisis de Trayecto de Mercaderia
-%    \item  Distribucion de Productos por transporte
-%    \item  Administracion de Stock de Productos
-%  \end{itemize}
-%
-%
-%\subsection {Alcance Estimado}
-%  Actualmente el Sistema sera de amplio alcance gracias a su facilidad
-%  de incorporacion y paquetes de modulos en la estrategia de venta, dando
-%  la posibilidad de obtener la atencion de las medianas y grandes empresas.
-%
-%\pagebreak
-%  \textbf {\emph{Listado de Empresas Nacionales de Transporte:} }
-%
-%  \begin{table}[!th]
-%    \begin{tabular}{|l|c|c|}
-%    \hline
-%      Periodo  & Jurisdiccion &  Empresa \\
-%    \hline
-%      11/2018  & NACIONAL     & MICRO OMNIBUS NORTE S.A. \\
-%    \hline
-%      11/2018  & NACIONAL     & UNION TRANSPORTISTAS DE EMPRESAS SA \\
-%    \hline
-%      11/2018  & NACIONAL     & TRANSPORTES DEL TEJAR S.A. \\
-%    \hline
-%      11/2018  & NACIONAL     & SOCIEDAD ANONIMA EXPRESO SUDOESTE \\
-%    \hline
-%      11/2018  & NACIONAL     & BUENOS AIRES BUS SOCIEDAD ANONIMA \\
-%    \hline
-%      11/2018  & NACIONAL     & LA CENTRAL DE VICENTE LOPEZ S.A. \\
-%    \hline
-%      11/2018  & NACIONAL     & TRANSPORTES SOL DE MAYO C.I.S.A. \\
-%    \hline
-%      11/2018  & NACIONAL     & UNION TRANSPORTISTAS DE EMPRESAS SA \\
-%    \hline
-%      11/2018  & NACIONAL     & MICRO OMNIBUS SUR S.A.C. \\
-%    \hline
-%      11/2018  & NACIONAL     & MICROOMNIBUS BARRANCAS DE BELGRANO S.A. \\
-%    \hline
-%      11/2018  & NACIONAL     & MICROOMNIBUS CIUDAD DE BS.AS. S.A.T.C.I \\
-%    \hline
-%      11/2018  & NACIONAL     & EMPRESA DE TRANSPORTES AMERICA S.A.C.I. \\
-%    \hline
-%      11/2018  & NACIONAL     & TRANSPORTES ATLANTIDA S.A.C. \\
-%    \hline
-%    \end{tabular}
-%    \caption{Ultima actualizacion 11/2019}
-%    \label{ex:table}
-%  \end{table}
-
 \section {Viabilidad de Negocio}
-
 \subsection{Proceso Productivo}
 \begin{itemize}
   \item \textbf {Materiales Necesarios}
@@ -181,7 +114,6 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
             competente acorde a los actuales estandares del desarrollo de sistemas
             de computacion para tener que evitar una previa capacitacion.
   \end{itemize}
-
 
   \item \textbf {Insumos}
   \begin{itemize}
@@ -235,7 +167,6 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   \end{itemize}
 \end{itemize}
 
-
 \subsection{Requerimientos Tecnicos}
 \begin{itemize}
   \item \textbf {Tecnologias}
@@ -268,40 +199,26 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   \end{itemize}
 \end{itemize}
 
-
 \subsection {Proyeccion de Costos Requeridos}
   \begin{table}[!th]
-    \begin{tabular}{|l|c|c|l|}
-      Producto         & Cant. Requerida  & Prec. Unidad. & Prec. Acum. & Publicacion  \\
+    \begin{tabular}{|l|c|c|l|c|}
+      Producto         & Cant. Requerida  & Prec. Unidad. (\$) & Prec. Acum. (\$) & Publicacion  \\
     \hline
-      Discos Externos  &  6  & 4489 & 26934 & \href{http://www.pc-retail.com.ar/prod/id=7615/GlobalBluePoint-ERP.aspx#toner} {Link}  \\
-    \hline
-      Pendrives        & 6  & 1105  & 6630 & \href{https://www.computershopping.com.ar/Producto/Pen-Drive-Kingston-DataTraveler-100-G3-32GB-USB-3-0} {Link}  \\
-    \hline
-      Monitores       & 33  &   & 402 & \href{} {Link}  \\
-    \hline
-      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
-    \hline
-      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
-    \hline
-      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
-    \hline
-      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
-    \hline
-      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
-    \hline
-      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
-    \hline
-      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
-    \hline
-      Discos Externos & 6   & 67  & 402 & \href{} {Link}  \\
+      Discos Externos  &  6  & 4.489 & 26.934 & \href{http://www.pc-retail.com.ar/prod/id=7615/GlobalBluePoint-ERP.aspx#toner} {Link}  \\
+      Pendrives        & 6  & 1.105  & 6.630 & \href{https://www.computershopping.com.ar/Producto/Pen-Drive-Kingston-DataTraveler-100-G3-32GB-USB-3-0} {Link}  \\
+      Monitores       & 33  & 22.440  & 740.520  & \href{https://www.computershopping.com.ar/Producto/Monitor-LED-Samsung-22--LS22F350-Full-HD-con-dise\%c3\%b1o-Super-Slim} {Link}  \\
+      Teclados        & 17 & 1.870  & 31.790 & \href{https://www.computershopping.com.ar/Producto/Teclado-en-Espa\%c3\%b1ol-Logitech-K120-USB} {Link}  \\
+      Mouse           & 17 & 1.785  & 30.345 & \href{https://www.computershopping.com.ar/Producto/Mouse-Logitech-Wireless-M170-Negro} {Link}  \\
+      Gabinete        & 17 & 62.645  & 1.064.965 & \href{https://www.computershopping.com.ar/Producto/Computadora-CS-Ryzen-5-Pro} {Link}  \\
+      Cable de Red RJ45 & 17 & 95  & 1.615  & \href{https://articulo.mercadolibre.com.ar/MLA-660810957-cable-de-red-utp-2-metros-rj45-cat-5e-patch-cord-ethernet-_JM#position=2&type=item&tracking_id=84f5b843-02ea-40a7-abc9-73691821a8ca} {Link}  \\
+      Modem           & 5  & 7905 & 39.525   & \href{https://www.computershopping.com.ar/Producto/Router-Wireless-N-de-Alta-Potencia-TP-Link-(TL-WR941HP)---3-Antenas-9dBi} {Link}  \\
+      Expansor Wifi   & 1 & 5100  & 5100  & \href{https://www.computershopping.com.ar/Producto/Extensor-de-Cobertura-WiFi-Universal-a-300Mbps-TL-WA850RE} {Link} \\
     \hline
     \end{tabular}
   \end{table}
 
 
 \section{Procesos}
-
 \subsection{Mapa de Procesos}
     % this include the content of process_map_content.tex
     %\include{process_map_content}
@@ -435,3 +352,76 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
 % building:
 %    par: 1  ( prodction area on building )
 %    sar: 1  ( spare time area  on building )
+
+
+
+
+
+
+
+
+%\section {Analsis del Mercado Consumidor}
+%\subsection {Perfil y Comportamiento del consumidor}
+%  El surgimiento de la necesidad de logistica para el transporte de
+%  productos o individuos, se origino en la Ingenieria Militar.
+%  El objetivo fue trasladar Miles de soldados al mismo tiempo utilizando
+%  varios y variados metodos evitando que el enemigo note su transporte
+%  y llegada al objetivo.
+%  Para llevar a cabo tal plan, se originan los planes de transportes.
+%  \newline\newline
+%  Actualmente las Empresas de Logistica tienen como objetivo, planificar el
+%  traslado de Personas, Productos, Materia Prima, etc, de un lugar a otro.
+%  Para ello se requiere de una gran infraestructura para poder satisfacer
+%  varias etapas que cumplen con el objetivo planteado.
+%  \newline\newline
+%  Algunas etapas son :
+%  \begin{itemize}
+%    \item  Analisis de Trayecto de Mercaderia
+%    \item  Distribucion de Productos por transporte
+%    \item  Administracion de Stock de Productos
+%  \end{itemize}
+%
+%
+%\subsection {Alcance Estimado}
+%  Actualmente el Sistema sera de amplio alcance gracias a su facilidad
+%  de incorporacion y paquetes de modulos en la estrategia de venta, dando
+%  la posibilidad de obtener la atencion de las medianas y grandes empresas.
+%
+%\pagebreak
+%  \textbf {\emph{Listado de Empresas Nacionales de Transporte:} }
+%
+%  \begin{table}[!th]
+%    \begin{tabular}{|l|c|c|}
+%    \hline
+%      Periodo  & Jurisdiccion &  Empresa \\
+%    \hline
+%      11/2018  & NACIONAL     & MICRO OMNIBUS NORTE S.A. \\
+%    \hline
+%      11/2018  & NACIONAL     & UNION TRANSPORTISTAS DE EMPRESAS SA \\
+%    \hline
+%      11/2018  & NACIONAL     & TRANSPORTES DEL TEJAR S.A. \\
+%    \hline
+%      11/2018  & NACIONAL     & SOCIEDAD ANONIMA EXPRESO SUDOESTE \\
+%    \hline
+%      11/2018  & NACIONAL     & BUENOS AIRES BUS SOCIEDAD ANONIMA \\
+%    \hline
+%      11/2018  & NACIONAL     & LA CENTRAL DE VICENTE LOPEZ S.A. \\
+%    \hline
+%      11/2018  & NACIONAL     & TRANSPORTES SOL DE MAYO C.I.S.A. \\
+%    \hline
+%      11/2018  & NACIONAL     & UNION TRANSPORTISTAS DE EMPRESAS SA \\
+%    \hline
+%      11/2018  & NACIONAL     & MICRO OMNIBUS SUR S.A.C. \\
+%    \hline
+%      11/2018  & NACIONAL     & MICROOMNIBUS BARRANCAS DE BELGRANO S.A. \\
+%    \hline
+%      11/2018  & NACIONAL     & MICROOMNIBUS CIUDAD DE BS.AS. S.A.T.C.I \\
+%    \hline
+%      11/2018  & NACIONAL     & EMPRESA DE TRANSPORTES AMERICA S.A.C.I. \\
+%    \hline
+%      11/2018  & NACIONAL     & TRANSPORTES ATLANTIDA S.A.C. \\
+%    \hline
+%    \end{tabular}
+%    \caption{Ultima actualizacion 11/2019}
+%    \label{ex:table}
+%  \end{table}
