Adds Market section

--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -18,9 +18,7 @@ BCOR5mm, % Binding correction
 \begin{document}
 
 \maketitle
-
 \tableofcontents
-
 \pagebreak
 
 \section{Idea y Oportunidad de Negocio}
@@ -69,7 +67,95 @@ sistema ya desarrollado ).
 Tambien la empresa contara con contratos diferenciados en tipos de paquetes de
 rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
 
-\section {Viabilidad de Negocio}
+\section{Analisis del Mercado Consumidor}
+\subsection{Perfil y Comportamiento del consumidor}
+  El surgimiento de la necesidad de logistica para el transporte de
+  productos o individuos, se origino en la Ingenieria Militar.
+  El objetivo fue trasladar Miles de soldados al mismo tiempo utilizando
+  varios y variados metodos evitando que el enemigo note su transporte
+  y llegada al objetivo.
+  Para llevar a cabo tal plan, se originan los planes de transportes.
+  \newline\newline
+  Actualmente las Empresas de Logistica tienen como objetivo, planificar el
+  traslado de Personas, Productos, Materia Prima, etc, de un lugar a otro.
+  Para ello se requiere de una gran infraestructura para poder satisfacer
+  varias etapas que cumplen con el objetivo planteado.
+  \newline\newline
+  Algunas etapas son :
+  \begin{itemize}
+    \item  Analisis de Trayecto de Mercaderia
+    \item  Distribucion de Productos por transporte
+    \item  Administracion de Stock de Productos
+  \end{itemize}
+
+\subsection{Alcance Estimado}
+  Actualmente el Sistema estara al alcance de Empresas de Transporte terrestre
+  para luego poder expandirlo a otros tipos de carga gracias a su facilidad de
+  incorporacion de paquetes de modulos utilizados en la estrategia de venta.
+
+\pagebreak
+
+ \textbf{Servicios que ofrecen nuestros clientes:}
+ \begin{flushleft}
+     \includegraphics[width=14cm, keepaspectratio]{images/services.png}
+ \end{flushleft}
+  \begin{itemize}
+    \item \textit{Imagen de la empresa :}
+      \href{http://www.esalogistica.com.ar/index.html#quehacemos} {Link}
+  \end{itemize}
+  \begin{quotation}
+    Actualmente, nuestro sistema cuenta con cada uno de los modulos requeridos
+    por los clientes promedios para satisfacer cada una de sus necesidades.
+  \end{quotation}
+ \textbf{Que transportan:}
+ \begin{flushleft}
+     \includegraphics[width=10cm, keepaspectratio]{images/loads.png}
+ \end{flushleft}
+  \begin{itemize}
+    \item \textit{Link al PDF del Gobierno de la Ciudad :}
+      \href{https://www.argentina.gob.ar/sites/default/files/transporte_terrestre_de_cereales_y_oleaginosas_2017_v1.pdf} {Link}
+  \end{itemize}
+  \begin{quotation}
+    El volumen de mercaderia que transportan nuestros clientes es tan
+    importante para ellos como para nosotros asegurar la fidelidad de las
+    cantidades ingresadas para una mayor seguridad a la hora de generar
+    reportes mensuales con estadisticas de los ingresos netamente generados.
+  \end{quotation}
+
+\pagebreak
+
+ \textbf{Ciudades Recorridas:}
+ \begin{flushleft}
+     \includegraphics[width=12cm, keepaspectratio]{images/cities.png}
+     \includegraphics[width=6cm, keepaspectratio]{images/country_map.png}
+ \end{flushleft}
+  \begin{itemize}
+    \item \textit{Link al PDF del Gobierno de la Ciudad :}
+      \href{https://www.argentina.gob.ar/sites/default/files/transporte_terrestre_de_cereales_y_oleaginosas_2017_v1.pdf} {Link}
+  \end{itemize}
+  \begin{quotation}
+    La administracion del almacenaje de los productos son tan importantes como
+    saber la posicion actual a medida que son transportados, ya que pueden
+    surgir retrasos en el envio por motivos varios. En esos casos es necesario
+    contar con rutas y estrategias alternativas para solventar el problema.
+  \end{quotation}
+ \textbf{Volumen de Cargas Anuales:}
+ \begin{flushleft}
+     \includegraphics[width=14cm, keepaspectratio]{images/annual_work_i.png}
+     \includegraphics[width=12cm, keepaspectratio]{images/annual_work_ii.png}
+ \end{flushleft}
+  \begin{itemize}
+    \item \textit{Link al PDF del Gobierno de la Ciudad :}
+      \href{https://www.argentina.gob.ar/sites/default/files/transporte_terrestre_de_cereales_y_oleaginosas_2017_v1.pdf} {Link}
+  \end{itemize}
+  \begin{quotation}
+    Con el volumen de Carga manejado anualmente, se ve la importancia de una
+    buena administracion y seguridad de compra por parte del cliente al ver
+    que puede acotar tiempos administrativos y utilizarlo en la busqueda de
+    nuevas oportunidades o buscar nuevos horizontes.
+  \end{quotation}
+
+\section{Viabilidad de Negocio}
 \subsection{Proceso Productivo}
 \begin{itemize}
   \item \textbf {Materiales Necesarios}
@@ -131,9 +217,7 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
             ya que algunas aplicaciones, ya sean utilizadas en internet o de
             escritorio, requieren la accion de presionar sobre botones en la
             pantalla.
-\pagebreak
-
-      \item Se requiere de \emph { \textbf{17} } Gabinetes (Caja rectangular
+    \item Se requiere de \emph { \textbf{17} } Gabinetes (Caja rectangular
               donde se unen componentes alimentados por cables de electricidad
               unidos a una placa madre que ejecutan las tareas internas del
               ordenador) armados con hardware (Componentes individuales del
@@ -150,12 +234,31 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
             Router ) Wifi ( Tecnologia de transmision de datos por medio de
             señales de ondas de radio en distintas frecuencias ) para
             conectividad de red sin cable.
+\pagebreak
+
     \item Se requiere de \emph { \textbf{1} } expansor de señal Wifi
             para un mayor abastecimiento de señal en todo el edificio y
             no depender de varios Routers para que la señal sea accesible en
             todas las oficinas.
   \end{itemize}
 \end{itemize}
+
+  \begin{table}[!th]
+    \begin{tabular}{|l|c|c|l|c|}
+      Producto         & Cant. Requerida  & Prec. Unidad. (\$) & Prec. Acum. (\$) & Publicacion  \\
+    \hline
+      Discos Externos  &  6  & 4.489 & 26.934 & \href{http://www.pc-retail.com.ar/prod/id=7615/GlobalBluePoint-ERP.aspx#toner} {Link}  \\
+      Pendrives        & 6  & 1.105  & 6.630 & \href{https://www.computershopping.com.ar/Producto/Pen-Drive-Kingston-DataTraveler-100-G3-32GB-USB-3-0} {Link}  \\
+      Monitores       & 33  & 22.440  & 740.520  & \href{https://www.computershopping.com.ar/Producto/Monitor-LED-Samsung-22--LS22F350-Full-HD-con-dise\%c3\%b1o-Super-Slim} {Link}  \\
+      Teclados        & 17 & 1.870  & 31.790 & \href{https://www.computershopping.com.ar/Producto/Teclado-en-Espa\%c3\%b1ol-Logitech-K120-USB} {Link}  \\
+      Mouse           & 17 & 1.785  & 30.345 & \href{https://www.computershopping.com.ar/Producto/Mouse-Logitech-Wireless-M170-Negro} {Link}  \\
+      Gabinete        & 17 & 62.645  & 1.064.965 & \href{https://www.computershopping.com.ar/Producto/Computadora-CS-Ryzen-5-Pro} {Link}  \\
+      Cable de Red RJ45 & 17 & 95  & 1.615  & \href{https://articulo.mercadolibre.com.ar/MLA-660810957-cable-de-red-utp-2-metros-rj45-cat-5e-patch-cord-ethernet-_JM#position=2&type=item&tracking_id=84f5b843-02ea-40a7-abc9-73691821a8ca} {Link}  \\
+      Modem           & 5  & 7905 & 39.525   & \href{https://www.computershopping.com.ar/Producto/Router-Wireless-N-de-Alta-Potencia-TP-Link-(TL-WR941HP)---3-Antenas-9dBi} {Link}  \\
+      Expansor Wifi   & 1 & 5100  & 5100  & \href{https://www.computershopping.com.ar/Producto/Extensor-de-Cobertura-WiFi-Universal-a-300Mbps-TL-WA850RE} {Link} \\
+    \hline
+    \end{tabular}
+  \end{table}
 
 \subsection{Localizacion}
 \begin{itemize}
@@ -199,23 +302,6 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   \end{itemize}
 \end{itemize}
 
-\subsection {Proyeccion de Costos Requeridos}
-  \begin{table}[!th]
-    \begin{tabular}{|l|c|c|l|c|}
-      Producto         & Cant. Requerida  & Prec. Unidad. (\$) & Prec. Acum. (\$) & Publicacion  \\
-    \hline
-      Discos Externos  &  6  & 4.489 & 26.934 & \href{http://www.pc-retail.com.ar/prod/id=7615/GlobalBluePoint-ERP.aspx#toner} {Link}  \\
-      Pendrives        & 6  & 1.105  & 6.630 & \href{https://www.computershopping.com.ar/Producto/Pen-Drive-Kingston-DataTraveler-100-G3-32GB-USB-3-0} {Link}  \\
-      Monitores       & 33  & 22.440  & 740.520  & \href{https://www.computershopping.com.ar/Producto/Monitor-LED-Samsung-22--LS22F350-Full-HD-con-dise\%c3\%b1o-Super-Slim} {Link}  \\
-      Teclados        & 17 & 1.870  & 31.790 & \href{https://www.computershopping.com.ar/Producto/Teclado-en-Espa\%c3\%b1ol-Logitech-K120-USB} {Link}  \\
-      Mouse           & 17 & 1.785  & 30.345 & \href{https://www.computershopping.com.ar/Producto/Mouse-Logitech-Wireless-M170-Negro} {Link}  \\
-      Gabinete        & 17 & 62.645  & 1.064.965 & \href{https://www.computershopping.com.ar/Producto/Computadora-CS-Ryzen-5-Pro} {Link}  \\
-      Cable de Red RJ45 & 17 & 95  & 1.615  & \href{https://articulo.mercadolibre.com.ar/MLA-660810957-cable-de-red-utp-2-metros-rj45-cat-5e-patch-cord-ethernet-_JM#position=2&type=item&tracking_id=84f5b843-02ea-40a7-abc9-73691821a8ca} {Link}  \\
-      Modem           & 5  & 7905 & 39.525   & \href{https://www.computershopping.com.ar/Producto/Router-Wireless-N-de-Alta-Potencia-TP-Link-(TL-WR941HP)---3-Antenas-9dBi} {Link}  \\
-      Expansor Wifi   & 1 & 5100  & 5100  & \href{https://www.computershopping.com.ar/Producto/Extensor-de-Cobertura-WiFi-Universal-a-300Mbps-TL-WA850RE} {Link} \\
-    \hline
-    \end{tabular}
-  \end{table}
 
 
 \section{Procesos}
@@ -227,7 +313,9 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   \begin{flushleft}
   \textbf{ \emph{Marketing : } } El proceso de \textit{Marketing} estara
   a cargo de la creacion del modelo de negocio para poder generar las ventas.
-   \newline \newline
+
+\pagebreak
+
   \textbf{ \emph{Publicidad : } } El proceso de \textit{Publicidad} estara
   a cargo de la imagen, estetica y estrategia artistica para llamar la atencion
   de los consumidores y generar consultas sobre nuestro producto.
@@ -267,7 +355,9 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   las distintas caracteristicas del producto. Por Ejemplo,
   \newline
   \& "\textsc{Entrada de Clientes}", "\textsc{Exportacion de Datos}".
-  \newline  \newline
+
+\pagebreak
+
   \textbf{ \emph{Relevamiento de Informacion : } } En el proceso de
   \textit{Relevamiento de Informacion} se realiza una reunion con el cliente
   para generar nuevos comportamientos y funcionalidades que pueden llevar al
