First approach to laws

--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -397,6 +397,61 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   \end{flushleft}
 
 
+\section{Viablilidad Legal}
+\subsection{Ley 20.744: Contrato de Trabajo}
+La Ley de Contrato de Trabajo regula como se relacionan los terminos laborales
+de los empleados de una empresa con un contrato bajo dependencia.
+La misma contiene pautas para la :
+\begin{itemize}
+  \item \emph{Administracion de los contratos de trabajo.}
+  \item \emph{Derechos y obligaciones de las partes.}
+  \item \emph{Vacaciones.}
+  \item \emph{Reglas sobre la proteccion del trabajo de la mujer y del menor.}
+  \item \emph{Protecciones salariales}
+  \item \emph{Limites en las suspenciones del contrato.}
+  \item \emph{Derechos que dispone el trabajador para el caso de extincion
+              del contrato.}
+\end{itemize}
+La Ley asegura que la contratacion por parte de la empresa al empleado
+no contenga condiciones de caracter ilicito y que el empleado sea
+retribuido acorde al contrato firmado y a sus tareas.
+
+\subsection{Ley 24.241: Sistema Integrado de Jubilaciones y Pensiones}
+La Ley de Jubilaciones y Pensionados cubre los problemas de los empleados
+que cumplieron mas de30 a\~nos aportando a los ingresos del pais siendo
+monotributista o bajo dependencia.
+Tambien dicta que la entidad donde el afiliado se encuentra trabajando,
+debe otorgar remuneraciones a la persona por invalidez o a la familia
+en caso de muerte.
+
+\subsection{Ley 20.628: Impuesto a las Ganancias}
+La Ley del Impuesto a las ganancias determina que toda entidad o personal
+que reside en el pais y obtiene ingresos dentro o fuera del pais, deben
+tributar de la totalidad de sus ganancias hasta el limite del incremento
+obligatorio fiscal.
+
+Caracteristicas :
+\begin{itemize}
+  \item \emph{Un tributo a las rentas de las personas físicas o humanas, con
+              alícuotas progresivas y deducciones por mínimos no alcanzados,
+              o sea un tributo personal, en teoría casi "hecho a medida" para
+              cada contribuyente, que se liquida anualmente por la totalidad
+              de las ganancias obtenidas en ese periodo.}
+  \item \emph{Un impuesto a la renta de sociedades (conocido en el mundo como
+              impuesto societario o impuesto de sociedades) que grava con un
+              porcentaje fijo las ganancias obtenidas por aquellas durante el
+              ejercicio, sin deducciones personales, ni mínimos no alcanzados.}
+  \item \emph{Un tributo a las ganancias que obtienen en el país quienes son
+              residentes en el exterior. Su particularidad es que se trata de
+              un tributo de los llamados instantáneos: cada operación se
+              alcanza con un porcentaje fijo y no interesa si se realiza una o
+              varias de ellas durante el periodo.}
+\end{itemize}
+
+% link: http://www.oas.org/juridico/PDFs/mesicic3_arg_ley20628.pdf
+% link: https://es.wikipedia.org/wiki/Impuesto_a_las_Ganancias_(Argentina)
+
+
 
 \section{Referencias}
 
